Lesson spacing fix final

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -136,6 +136,7 @@ body{
   background: white;
   padding-top: 0px;
   margin-top: 0px;
+  margin-bottom: 0px;
   margin-left: 5%;
   margin-right: 5%;
 }
